web-upload/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: web-upload
  name: web-upload
  #namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-upload
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-upload
    spec:
      containers:
      #- image: schnitz81/nginx-https
      - image: schnitz81/web-upload
        imagePullPolicy: Always
        name: web-upload
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 80 
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 61
