web-upload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-upload
spec:
  type: NodePort
  ports:
    - name: web-upload
      protocol: TCP 
      port: 80 
      targetPort: 80
  selector:
    app: web-upload
