web-upload/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: web-upload-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        #pathType: Prefix
        backend:
          serviceName: web-upload
          servicePort: 8888
